--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
                     </div>
                     <div class="col">
                       <div class="card h-100">
-                        <img src="assets/img/Photos/Morder pyschology.png" class="card-img-top" alt="...">
+                        <img src="assets/img/Photos/Morder psyc.png" class="card-img-top" alt="...">
                         <div class="card-body">
                           <h5 class="card-title">Modern Psychology</h5>
                           <p class="card-text">Designation</p>
@@ -182,7 +182,7 @@
                     </div>
                     <div class="col">
                       <div class="card h-100">
-                        <img src="assets/img/Photos/Morder pyschology.png" class="card-img-top" alt="...">
+                        <img src="assets/img/Photos/Morder pychons.png" class="card-img-top" alt="...">
                         <div class="card-body">
                           <h5 class="card-title">Modern Psychology</h5>
                           <p class="card-text">Designation</p>
